add extendSubnet api
